--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
     "firebase": "^11.0.1",
     "imagekitio-next": "^1.0.0",
     "lucide-react": "^0.441.0",
-    "next": "14.2.8",
+    "next": "^14.2.16",
     "react": "^18",
     "react-dom": "^18",
     "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.0.2"
   },
   "devDependencies": {
     "eslint": "^8",
