--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase": "^11.0.1",
     "imagekitio-next": "^1.0.0",
     "lucide-react": "^0.441.0",
+    "mongodb": "^6.11.0",
     "next": "^14.2.16",
     "react": "^18",
     "react-dom": "^18",
