--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "^14.2.16",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
