a lot of update

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.4.0",
     "react-quill": "^2.0.0",
     "sweetalert2": "^11.15.2",
     "sweetalert2-react-content": "^5.1.0",
